Fix test errors